--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}{% include LI.html %}</div>
     <div class="col-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
