changed col to col-md

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}{% include LI.html %}</div>
-    <div class="col-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
+    <div class="col-md"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}{% include LI.html %}</div>
+    <div class="col-md-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
   </div>
   <br>
   <div class="row">
