--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row row-grid">
     <div class="col-sm-3"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}{% include LI.html %}</div>
     <div class="col-sm-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
   </div>
