Added Parallax Effect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container-fluid">
   <div class="row row-grid">
-    <div class="col-sm-3"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}{% include LI.html %}</div>
+    <div class="col-sm-3"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}<br><span style="font-size:1vw;color:red;">---(Broken LinkedIn Badge:)---<br>{% include LI.html %}-------------------------------------</span></div>
     <div class="col-sm-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
   </div>
   <br>
@@ -15,7 +15,7 @@ layout: default
     <div class="col">{% include section_courses.html %}</div>
   </div>
   <div class="row">
-    <div class="col">{% include section_github.html %}</div>
+    <div class="col"><span style="font-size:1vw;color:red;">---(Broken Github Widget:)---<br>{% include section_github.html %}-------------------------------------</span></div>
   </div>
 </div>
 
