--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container-fluid">
   <div class="row row-grid">
-    <div class="col-sm-3"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}<br><span style="font-size:1vw;color:red;">---(Broken LinkedIn Badge:)---<br>{% include LI.html %}-------------------------------------</span></div>
+    <div class="col-sm-3"><!--{% include section_portrait.html %}-->{% include section_contact.html %}<br>{% include section_resume.html %}<br> <!-- <span style="font-size:1vw;color:red;">---(Broken LinkedIn Badge:)---<br>{% include LI.html %}-------------------------------------</span> --> </div>
     <div class="col-sm-9">{% include section_intro.html %}{% include section_skills.html %}{% include section_certs.html %}</div>
   </div>
   <br>
@@ -16,6 +16,11 @@ layout: default
   </div>
   <div class="row">
     <div class="col"><span style="font-size:1vw;color:red;">---(Broken Github Widget:)---<br>{% include section_github.html %}-------------------------------------</span></div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="josh-rabinowitz-915705158"><a class="LI-simple-link" href='https://www.linkedin.com/in/josh-rabinowitz-915705158?trk=profile-badge'>Josh Rabinowitz</a></div>
+    </div>
   </div>
 </div>
 
