--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 	<div class="col-sm-3">
 		<!--{% include section_portrait.html %}-->
 		{% include section_contact.html %}<br>
-		{% include section_resume.html %}<br>
-		{% include LI.html %}
+		{% include section_resume.html %}
+		<!-- {% include LI.html %} -->
 	</div>
     	<div class="col-sm-9">
 		{% include section_intro.html %}
@@ -15,8 +15,6 @@ layout: default
 		{% include section_certs.html %}
 	</div>
 </div>
-
 {% include section_education.html %}
 {% include section_courses.html %}
 {% include section_github.html %}
-<!-- {% include section_rss.html %} -->
