--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@ layout: default
 {% include section_education.html %}
 {% include section_courses.html %}
 {% include section_github.html %}
+{% include section_info.html %}
